# RAG-Pipeline

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
evaluation/standard_model/: report.txt  report_italiano.md
src/: __init__.py  claim_verifier.py  config.py  evaluate.py  gemini_client.py  indexing.py  prompts.py  retriever.py  run_pipeline.py
src/generators/: __init__.py  gemini_api.py  gpt_rag.py  open_rag.py
src/knowledge_base/: __init__.py  loader.py
src/retrievers/: __init__.py  base.py  bm25_retriever.py  faiss_retriever.py
src/utils/: __init__.py  text_processing.py
